--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^1.1.2
+  responsive_framework: ^0.0.14
+  flutter_icons: ^1.1.0
+  smooth_page_indicator: ^0.2.0
+  carousel_slider: ^3.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
